# SharpEdge-Quant

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  docker-compose.yml  frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  vite.config.ts
data/: .gitkeep
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: Auth.tsx  BacktestDashboard.tsx  EquityChart.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  PerformanceMetrics.tsx  PriceChart.tsx  RunBacktestButton.tsx  StrategySelector.tsx
src/cpp/: backtester.cpp  backtester.h  binding.cpp  performance_metrics.cpp  performance_metrics.h  trade_simulator.cpp  trade_simulator.h
src/lib/: supabase.ts
src/python/: api.py  data_ingestion.py  main.py  signal_generation.py
